<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/discover"
        android:icon="@drawable/location_pin"
        android:title="@string/home"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/chats"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/chats"
        app:labelVisibilityMode="labeled"
        />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/calendar"
        app:labelVisibilityMode="labeled"
        />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        app:labelVisibilityMode="labeled"
        />

    <item
        android:id="@+id/events"
        android:icon="@drawable/baseline_event_24"
        android:title="@string/events"
        app:labelVisibilityMode="labeled"
        />

</menu>