<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/discover"
        android:icon="@drawable/explore"
        android:title="@string/home"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/products"
        android:icon="@drawable/product_icon"
        android:title="@string/products"
        app:labelVisibilityMode="labeled"
        />

    <item
        android:id="@+id/services"
        android:icon="@drawable/add"
        android:title="@string/services"
        app:labelVisibilityMode="labeled"
        />

    <item
        android:id="@+id/priceList"
        android:icon="@drawable/prices"
        android:title="@string/prices"
        app:labelVisibilityMode="labeled"
        />

<!--    <item-->
<!--        android:id="@+id/profile"-->
<!--        android:icon="@drawable/ic_profile"-->
<!--        android:title="@string/profile"-->
<!--        app:labelVisibilityMode="labeled" />-->

</menu>