<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/filter_solutions"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_product"
                android:text="@string/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_service"
                android:text="@string/service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_solution_categories"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="@string/solution_categories"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_solution_categories"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_solution_event_types"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:hint="@string/event_types"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_solution_event_types"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/price_range"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rs_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/discount_range"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rs_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_visibility"
            android:text="@string/visible"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_availability"
            android:text="@string/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/service_section"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/duration_range_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rs_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/engagement_range"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rs_engagement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/max_reservation_deadline"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reservation_deadline"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/max_cancellation_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cancellation_deadline"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:hint="@string/reservation_methods"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_reservation_methods"
                    android:focusable="false"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/reset"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                style="@style/Widget.Material3.Button"
                android:text="@string/apply"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
