<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/discover"
        android:icon="@drawable/explore"
        android:title="@string/home"
        app:labelVisibilityMode="labeled" />

<!--    <item-->
<!--        android:id="@+id/notifications"-->
<!--        android:icon="@drawable/ic_notifications"-->
<!--        android:title="@string/notifications"-->
<!--        app:labelVisibilityMode="labeled" />-->

    <item
        android:id="@+id/reviews"
        android:icon="@drawable/ic_reviews"
        android:title="@string/reviews"
        app:labelVisibilityMode="labeled" />

    <item
        android:id="@+id/reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports"
        app:labelVisibilityMode="labeled" />

<!--    <item-->
<!--        android:id="@+id/profile"-->
<!--        android:icon="@drawable/ic_profile"-->
<!--        android:title="@string/profile"-->
<!--        app:labelVisibilityMode="labeled" />-->
</menu>
